@@ -42,7 +42,8 @@ extern "C"
         NULL,                                   /* input_panel_imdata_set */
         NULL,                                   /* input_panel_imdata_get */
         NULL,                                   /* input_panel_return_key_type_set */
-        NULL                                    /* input_panel_return_key_disabled_set */
+        NULL,                                   /* input_panel_return_key_disabled_set */
+        NULL                                    /* input_panel_caps_lock_mode_set */
    };
 
    static Ecore_IMF_Context *imf_module_create (void);
