@@ -801,7 +801,8 @@ static Ecore_IMF_Context_Class xim_class = {
    .input_panel_imdata_set = NULL,
    .input_panel_imdata_get = NULL,
    .input_panel_return_key_type_set = NULL,
-   .input_panel_return_key_disabled_set = NULL
+   .input_panel_return_key_disabled_set = NULL,
+   .input_panel_caps_lock_mode_set = NULL
 };
 
 static Ecore_IMF_Context *
